<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>AtlasWidget</class>
 <widget class="QWidget" name="AtlasWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>322</width>
    <height>387</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="spacing">
    <number>2</number>
   </property>
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <item>
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>Atlas Group</string>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <property name="leftMargin">
       <number>2</number>
      </property>
      <property name="topMargin">
       <number>2</number>
      </property>
      <property name="rightMargin">
       <number>2</number>
      </property>
      <property name="bottomMargin">
       <number>2</number>
      </property>
      <property name="spacing">
       <number>2</number>
      </property>
      <item row="0" column="0">
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
         <widget class="QComboBox" name="cmbAtlasGroups"/>
        </item>
       </layout>
      </item>
      <item row="0" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QToolButton" name="btnAddGroup">
          <property name="text">
           <string>...</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QToolButton" name="btnRemoveGroup">
          <property name="text">
           <string>...</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item row="1" column="0">
       <layout class="QHBoxLayout" name="horizontalLayout_6">
        <property name="spacing">
         <number>2</number>
        </property>
        <item>
         <widget class="QLabel" name="label_3">
          <property name="text">
           <string>Number of Textures:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="lblNumTextures">
          <property name="font">
           <font>
            <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
          <property name="text">
           <string>0</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="Line" name="line">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="lblTexDimensions">
          <property name="text">
           <string>(2048x2048)</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="Line" name="line_2">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="lblTexType">
          <property name="text">
           <string>R8G8B8A8</string>
          </property>
         </widget>
        </item>
        <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>40</width>
            <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
       </layout>
      </item>
      <item row="1" column="1">
       <widget class="QToolButton" name="btnSettings">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="AtlasTreeWidget" name="atlasList">
     <property name="mouseTracking">
      <bool>false</bool>
     </property>
     <property name="selectionMode">
      <enum>QAbstractItemView::ExtendedSelection</enum>
     </property>
     <property name="columnCount">
      <number>2</number>
     </property>
     <attribute name="headerVisible">
      <bool>false</bool>
     </attribute>
     <attribute name="headerCascadingSectionResizes">
      <bool>true</bool>
     </attribute>
     <column>
      <property name="text">
       <string notr="true">1</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string notr="true">2</string>
      </property>
     </column>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_5">
     <item>
      <widget class="QToolButton" name="btnAddImages">
       <property name="text">
        <string>...</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QToolButton" name="btnAddDir">
       <property name="text">
        <string>...</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QToolButton" name="btnAddFilter">
       <property name="text">
        <string>...</string>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer_5">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QToolButton" name="btnReplaceImages">
       <property name="text">
        <string>...</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QToolButton" name="btnDeleteImages">
       <property name="text">
        <string>...</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
  <action name="actionDeleteImages">
   <property name="icon">
    <iconset resource="../res/DesignerTool.qrc">
     <normaloff>:/icons16x16/items/Atlas-Delete.png</normaloff>:/icons16x16/items/Atlas-Delete.png</iconset>
   </property>
   <property name="text">
    <string>Delete</string>
   </property>
   <property name="toolTip">
    <string>Removes the selected image(s) from the atlas manager. All affected textures will be regenerated.</string>
   </property>
  </action>
  <action name="actionReplaceImages">
   <property name="icon">
    <iconset resource="../res/DesignerTool.qrc">
     <normaloff>:/icons16x16/atlas-replaceFrame.png</normaloff>:/icons16x16/atlas-replaceFrame.png</iconset>
   </property>
   <property name="text">
    <string>Replace Images</string>
   </property>
   <property name="toolTip">
    <string>Replace the selected frame(s) from the atlas manager. All affected textures will be regnerated.</string>
   </property>
  </action>
  <action name="actionAddFilter">
   <property name="icon">
    <iconset resource="../res/DesignerTool.qrc">
     <normaloff>:/icons16x16/items/Prefix-New.png</normaloff>:/icons16x16/items/Prefix-New.png</iconset>
   </property>
   <property name="text">
    <string>Add Filter</string>
   </property>
   <property name="toolTip">
    <string>Insert a new filter to organize images</string>
   </property>
  </action>
  <action name="actionRename">
   <property name="icon">
    <iconset resource="../res/DesignerTool.qrc">
     <normaloff>:/icons16x16/generic-rename.png</normaloff>:/icons16x16/generic-rename.png</iconset>
   </property>
   <property name="text">
    <string>Rename</string>
   </property>
   <property name="toolTip">
    <string>Renames the selected filter or frame</string>
   </property>
  </action>
  <action name="actionAtlasGroups">
   <property name="icon">
    <iconset resource="../res/DesignerTool.qrc">
     <normaloff>:/icons16x16/atlas-assemble.png</normaloff>:/icons16x16/atlas-assemble.png</iconset>
   </property>
   <property name="text">
    <string>Atlas Groups...</string>
   </property>
   <property name="toolTip">
    <string>By organizing images into groups, you can logically partition assets to avoid unnecessary loads.</string>
   </property>
  </action>
  <action name="actionAddGroup">
   <property name="icon">
    <iconset resource="../res/DesignerTool.qrc">
     <normaloff>:/icons16x16/generic-add.png</normaloff>:/icons16x16/generic-add.png</iconset>
   </property>
   <property name="text">
    <string>Add Atlas Group</string>
   </property>
   <property name="toolTip">
    <string>Creates a new atlas group</string>
   </property>
  </action>
  <action name="actionRemoveGroup">
   <property name="icon">
    <iconset resource="../res/DesignerTool.qrc">
     <normaloff>:/icons16x16/edit-delete.png</normaloff>:/icons16x16/edit-delete.png</iconset>
   </property>
   <property name="text">
    <string>Remove Atlas Group</string>
   </property>
   <property name="toolTip">
    <string>Removes the currently selected atlas group.</string>
   </property>
  </action>
  <action name="actionImportImages">
   <property name="icon">
    <iconset resource="../res/DesignerTool.qrc">
     <normaloff>:/icons16x16/items/Atlas-New.png</normaloff>:/icons16x16/items/Atlas-New.png</iconset>
   </property>
   <property name="text">
    <string>Import Images</string>
   </property>
   <property name="toolTip">
    <string>Import 1 or more images from a single directory</string>
   </property>
  </action>
  <action name="actionImportDirectory">
   <property name="icon">
    <iconset resource="../res/DesignerTool.qrc">
     <normaloff>:/icons16x16/items/Atlas-Open.png</normaloff>:/icons16x16/items/Atlas-Open.png</iconset>
   </property>
   <property name="text">
    <string>Import Image Directory</string>
   </property>
   <property name="toolTip">
    <string>Imports all images found recursively from a start directory</string>
   </property>
  </action>
  <action name="actionGroupSettings">
   <property name="icon">
    <iconset resource="../res/DesignerTool.qrc">
     <normaloff>:/icons16x16/generic-settings.png</normaloff>:/icons16x16/generic-settings.png</iconset>
   </property>
   <property name="text">
    <string>Atlas Group Settings</string>
   </property>
   <property name="toolTip">
    <string>Change packing options and texture type for the currently selected atlas group</string>
   </property>
  </action>
 </widget>
 <customwidgets>
  <customwidget>
   <class>AtlasTreeWidget</class>
   <extends>QTreeWidget</extends>
   <header>AtlasWidget.h</header>
  </customwidget>
 </customwidgets>
 <resources>
  <include location="../res/DesignerTool.qrc"/>
 </resources>
 <connections/>
</ui>
